feat: agregue dos funciones, una para crear un archivos .txt que contienen el texto codificado y decodificado y una funcion que calcula el peso del archivo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "queue": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "ostream": "cpp"
     }
 }
